@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-10-23T00:36:41Z",
+  "timestamp" : "2024-10-23T12:14:00Z",
   "count_outdated" : 4647,
   "uniques_outdated" : 849,
-  "count" : 4672,
-  "uniques" : 859,
+  "count" : 4673,
+  "uniques" : 860,
   "views" : [
     {
       "timestamp": "2024-10-11T00:00:00Z",
@@ -70,6 +70,15 @@
     },
     {
       "timestamp": "2024-10-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-10-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
