@@ -1,6 +1,6 @@
 {
-  "count": 25,
-  "uniques": 10,
+  "count": 26,
+  "uniques": 11,
   "views": [
     {
       "timestamp": "2024-10-11T00:00:00Z",
@@ -39,6 +39,11 @@
     },
     {
       "timestamp": "2024-10-21T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-10-23T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
