@@ -1,3 +1,12 @@
+2024-10-23T12:14:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11479613841 # 605
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-23
+* notice: last 14d: unq all: 11 26
+* notice: prev accum: outdated-unq outdated-all / unq all: 849 4647 / 859 4672
+* notice: next accum: outdated-unq outdated-all / unq all: 849 4647 / 860 4673
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-10-23]
+
 2024-10-23T00:36:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/11470813041 # 604
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-23
